"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

gtk/config.c, gtk/gx11.c: remove including some files which we don't need included.
gtk/keys.c: Modify to not use X11 for keybinding - instead, uses gdk
    functionality - this should make it more portable.
MSW 2003-01-22

Patch by scachi@gmx.de to add different display options for the players
resistances.
common/client.h: increase CONFIG_NUMS and add CONFIG_RESISTS
common/init.c: extend resists_table, initialize resist value to proper
   value.
gtk/config.c: Add config option for selecting different options for
   resistance displays.  Add comment about radio button usage.  Increase
   size of config window.
gtk/gtkproto.h: rebuilt.
gtk/gx11.c: Update get_message_display to support different resistance
   display options.  Add resisze_resistance_table function.  Disable
   code the causes the message window to get relocated next to the
   stats display on wide displays.
MSW 2003-01-12

x11/x11.c: Patch by Jochen Suckfuell that fixes problem of lines
   printed out while entering extended commands causes the extended command
   line to get overwritten - the extended command line is now copied to the
   next line.
common/client.c: Add handling of client if it loses its connection to
   server during setup phase.
common/newsocket.c: Have SockList_ReadPacket return -1 if it gets
   a real error on read - in this way, callers can tell if error is
   terminal or retryable (return code 0)
MSW 2003-01-03

common/player.c: Break out some of the extended commands into there
   own function to make the extended_command function more readable.
   Alphabetize strcmps in extended_command.  Add special processing
   for the 'take' command so that it handles open containers properly.
gtk/gx11.c: Add version information to the About dialogue box.
gtk/key.c: Fix bug in that extended commands (') didn't work right and